ci: deploy documentation after new version gets published
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,6 +2,8 @@ name: Build and deploy documentation
 
 on:
   workflow_dispatch:
+  release:
+    types: [published]
   push:
     branches: [ "main" ]
 
