--- a/tests/integration/file/cassettes/test_file_service/TestFileService.test_create_retrieve_delete_file.yaml
+++ b/tests/integration/file/cassettes/test_file_service/TestFileService.test_create_retrieve_delete_file.yaml
@@ -15,23 +15,24 @@ interactions:
       content-type:
       - multipart/form-data; boundary=BOUNDARY
     method: POST
-    uri: https://api.com/v2/files?version=2024-04-09
+    uri: https://api.com/v2/files?version=2024-05-13
   response:
     body:
-      string: '{"result":{"id":"89223a19-8324-4add-81c3-fd3bfadc7610","bytes":42,"file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-04-16T09:07:23.000Z","updated_at":"2024-04-16T09:07:23.000Z","file_formats":[],"descendants":[]}}'
+      string: '{"result":{"id":"4b8c5158-4067-412e-bd46-7dc69cc961c4","bytes":42,"file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-05-21T09:58:51.000Z","updated_at":"2024-05-21T09:58:51.000Z","file_formats":[],"descendants":[],"metadata":null}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:23 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
-      - '265'
+      - '281'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-04-09'
+      - '2024-05-13'
+      date:
+      - Tue, 21 May 2024 09:58:51 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=4e65f69b7d93f33a0c51e9f5b1bb64da; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -53,61 +54,26 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/files?search=file.json&version=2024-04-09
+    uri: https://api.com/v2/files?search=file.json&version=2024-05-13
   response:
     body:
-      string: '{"results":[{"id":"89223a19-8324-4add-81c3-fd3bfadc7610","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-04-16T09:07:23.000Z","updated_at":"2024-04-16T09:07:23.000Z","file_formats":[],"descendants":[]}],"total_count":1}'
+      string: '{"results":[{"id":"4b8c5158-4067-412e-bd46-7dc69cc961c4","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-05-21T09:58:51.000Z","updated_at":"2024-05-21T09:58:51.000Z","file_formats":[],"descendants":[]}],"total_count":1}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:23 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '286'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-04-09'
-      vary:
-      - accept-encoding
-      x-ratelimit-limit:
-      - '25'
-      x-ratelimit-remaining:
-      - '24'
-      x-ratelimit-reset:
-      - '1'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: ''
-    headers:
-      accept:
-      - '*/*'
-      accept-encoding:
-      - gzip, deflate
-      connection:
-      - keep-alive
-    method: GET
-    uri: https://api.com/v2/files/89223a19-8324-4add-81c3-fd3bfadc7610?version=2024-04-09
-  response:
-    body:
-      string: '{"result":{"id":"89223a19-8324-4add-81c3-fd3bfadc7610","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-04-16T09:07:23.000Z","updated_at":"2024-04-16T09:07:23.000Z","file_formats":[],"descendants":[]}}'
-    headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:24 GMT
-      Keep-Alive:
+      - '2024-05-13'
+      date:
+      - Tue, 21 May 2024 09:58:51 GMT
+      keep-alive:
       - timeout=72
-      content-length:
-      - '267'
-      content-type:
-      - application/json; charset=utf-8
-      content-version:
-      - '2024-04-09'
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=4e65f69b7d93f33a0c51e9f5b1bb64da; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -129,68 +95,26 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/files/89223a19-8324-4add-81c3-fd3bfadc7610/content?version=2023-11-22
+    uri: https://api.com/v2/files/4b8c5158-4067-412e-bd46-7dc69cc961c4?version=2024-05-13
   response:
     body:
-      string: '{"data": "EXAMPLE TEMPLATE {{variable}}}"}'
+      string: '{"result":{"id":"4b8c5158-4067-412e-bd46-7dc69cc961c4","bytes":"42","file_name":"file.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-05-21T09:58:51.000Z","updated_at":"2024-05-21T09:58:51.000Z","file_formats":[],"descendants":[]}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:25 GMT
-      Keep-Alive:
-      - timeout=72
-      Transfer-Encoding:
-      - chunked
+      cache-control:
+      - private
       content-length:
-      - '42'
-      content-type:
-      - application/json
-      content-version:
-      - '2023-11-22'
-      vary:
-      - accept-encoding
-      x-ratelimit-limit:
-      - '25'
-      x-ratelimit-remaining:
-      - '24'
-      x-ratelimit-reset:
-      - '1'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: "--BOUNDARY\r\nContent-Disposition: form-data; name=\"file\"; filename=\"file_updated.json\"\r\nContent-Type:
-      application/json\r\n\r\n{\"data\": \"UPDATED EXAMPLE TEMPLATE {{variable}}}\"}\r\n--BOUNDARY--\r\n"
-    headers:
-      accept:
-      - '*/*'
-      accept-encoding:
-      - gzip, deflate
-      connection:
-      - keep-alive
-      content-length:
-      - '235'
-      content-type:
-      - multipart/form-data; boundary=BOUNDARY
-    method: PATCH
-    uri: https://api.com/v2/files/89223a19-8324-4add-81c3-fd3bfadc7610?version=2023-11-22
-  response:
-    body:
-      string: '{"result":{"id":"89223a19-8324-4add-81c3-fd3bfadc7610","bytes":50,"file_name":"file_updated.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-04-16T09:07:23.000Z","updated_at":"2024-04-16T09:07:27.778Z","file_formats":[],"descendants":[]}}'
-    headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:28 GMT
-      Keep-Alive:
-      - timeout=72
-      content-length:
-      - '273'
+      - '267'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2023-11-22'
+      - '2024-05-13'
+      date:
+      - Tue, 21 May 2024 09:58:52 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=1cfd42cdc433b82fbac42f242129345f; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -212,25 +136,115 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/files/89223a19-8324-4add-81c3-fd3bfadc7610/content?version=2023-11-22
+    uri: https://api.com/v2/files/4b8c5158-4067-412e-bd46-7dc69cc961c4/content?version=2023-11-22
+  response:
+    body:
+      string: '{"data": "EXAMPLE TEMPLATE {{variable}}}"}'
+    headers:
+      cache-control:
+      - private
+      content-length:
+      - '42'
+      content-type:
+      - application/json
+      content-version:
+      - '2023-11-22'
+      date:
+      - Tue, 21 May 2024 09:58:52 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=1cfd42cdc433b82fbac42f242129345f; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
+      - chunked
+      vary:
+      - accept-encoding
+      x-ratelimit-limit:
+      - '25'
+      x-ratelimit-remaining:
+      - '23'
+      x-ratelimit-reset:
+      - '0'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: "--BOUNDARY\r\nContent-Disposition: form-data; name=\"file\"; filename=\"file_updated.json\"\r\nContent-Type:
+      application/json\r\n\r\n{\"data\": \"UPDATED EXAMPLE TEMPLATE {{variable}}}\"}\r\n--BOUNDARY--\r\n"
+    headers:
+      accept:
+      - '*/*'
+      accept-encoding:
+      - gzip, deflate
+      connection:
+      - keep-alive
+      content-length:
+      - '235'
+      content-type:
+      - multipart/form-data; boundary=BOUNDARY
+    method: PATCH
+    uri: https://api.com/v2/files/4b8c5158-4067-412e-bd46-7dc69cc961c4?version=2023-11-22
+  response:
+    body:
+      string: '{"result":{"id":"4b8c5158-4067-412e-bd46-7dc69cc961c4","bytes":50,"file_name":"file_updated.json","purpose":"template","storage_provider_location":"us-east","created_at":"2024-05-21T09:58:51.000Z","updated_at":"2024-05-21T09:58:53.468Z","file_formats":[],"descendants":[]}}'
+    headers:
+      content-length:
+      - '273'
+      content-type:
+      - application/json; charset=utf-8
+      content-version:
+      - '2023-11-22'
+      date:
+      - Tue, 21 May 2024 09:58:53 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=21a244f2f28a29d7a8687c9fac987714; path=/;
+        HttpOnly; Secure; SameSite=None
+      vary:
+      - accept-encoding
+      x-ratelimit-limit:
+      - '25'
+      x-ratelimit-remaining:
+      - '22'
+      x-ratelimit-reset:
+      - '0'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: ''
+    headers:
+      accept:
+      - '*/*'
+      accept-encoding:
+      - gzip, deflate
+      connection:
+      - keep-alive
+    method: GET
+    uri: https://api.com/v2/files/4b8c5158-4067-412e-bd46-7dc69cc961c4/content?version=2023-11-22
   response:
     body:
       string: '{"data": "UPDATED EXAMPLE TEMPLATE {{variable}}}"}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:29 GMT
-      Keep-Alive:
-      - timeout=72
-      Transfer-Encoding:
-      - chunked
+      cache-control:
+      - private
       content-length:
       - '50'
       content-type:
       - application/json
       content-version:
       - '2023-11-22'
+      date:
+      - Tue, 21 May 2024 09:58:54 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=4e65f69b7d93f33a0c51e9f5b1bb64da; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
+      - chunked
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -252,25 +266,26 @@ interactions:
       connection:
       - keep-alive
     method: DELETE
-    uri: https://api.com/v2/files/89223a19-8324-4add-81c3-fd3bfadc7610?version=2023-11-22
+    uri: https://api.com/v2/files/4b8c5158-4067-412e-bd46-7dc69cc961c4?version=2023-11-22
   response:
     body:
       string: ''
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:30 GMT
-      Keep-Alive:
-      - timeout=72
       content-version:
       - '2023-11-22'
+      date:
+      - Tue, 21 May 2024 09:58:54 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=4e65f69b7d93f33a0c51e9f5b1bb64da; path=/;
+        HttpOnly; Secure; SameSite=None
       x-ratelimit-limit:
       - '25'
       x-ratelimit-remaining:
-      - '24'
+      - '23'
       x-ratelimit-reset:
-      - '1'
+      - '0'
     status:
       code: 204
       message: No Content
@@ -284,23 +299,26 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/files?search=file.json&version=2024-04-09
+    uri: https://api.com/v2/files?search=file.json&version=2024-05-13
   response:
     body:
       string: '{"results":[],"total_count":0}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Tue, 16 Apr 2024 09:07:31 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
       - '30'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-04-09'
+      - '2024-05-13'
+      date:
+      - Tue, 21 May 2024 09:58:55 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=4e65f69b7d93f33a0c51e9f5b1bb64da; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
       x-ratelimit-limit:
