docs: update changelog for v3.0.0
Signed-off-by: Radek Ježek <pc.jezek@gmail.com>

--- a/scripts/docs_changelog_generator/authors_by_name.yaml
+++ b/scripts/docs_changelog_generator/authors_by_name.yaml
@@ -2,3 +2,5 @@ Tomas Dvorak: Tomas2D
 Radek Jezek: jezekra1
 David Kristek: David-Kristek
 Jan Pokorny: JanPokorny
+Yoav Katz: yoavkatz
+Louis Mandel: lmandel
